--- a/.github/workflows/cc-payload-after-push.yaml
+++ b/.github/workflows/cc-payload-after-push.yaml
@@ -24,7 +24,7 @@ jobs:
           - cc-tdx-td-shim
           - cc-tdx-tdvf
     steps:
-      - name: Login to quay.io
+      - name: Login to Kata Containers quay.io
         uses: docker/login-action@v2
         with:
           registry: quay.io
@@ -76,7 +76,7 @@ jobs:
     needs: create-kata-tarball
     runs-on: ubuntu-latest
     steps:
-      - name: Login to quay.io
+      - name: Login to Confidential Containers quay.io
         uses: docker/login-action@v2
         with:
           registry: quay.io
