--- a/.github/workflows/cc-payload-after-push.yaml
+++ b/.github/workflows/cc-payload-after-push.yaml
@@ -32,6 +32,8 @@ jobs:
           password: ${{ secrets.QUAY_DEPLOYER_PASSWORD }}
 
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Build ${{ matrix.asset }}
         run: |
           make "${KATA_ASSET}-tarball"
